<resources>
    <string name="app_name">UI</string>


    <!-- Button name -->
    <string name="pegatron">Pegatron</string>
    <string name="daily">Health Daily</string>
    <string name="scan">Health Scan</string>
    <string name="app">App</string>
    <string name="inter">Internet</string>
    <string name="setting">Setting</string>
    <string name="rtls">RTLS</string>
    <string name="back">Back</string>


    <!-- Health Daily scan -->
    <string name="hand">Hand</string>
    <string name="name">Name(姓名):</string>
    <string name="date">Date(日期):</string>
    <string name="symptoms">Symptoms(徵狀):</string>
    <string name="temperature">Temperature(溫度):</string>
    <string name="heart_rate">Heart Rate(心率):</string>
    <string name="gender">Gender(性別):</string>
    <string name="height">Height(身高):</string>
    <string name="weight">Weight(體重):</string>
    <string name="emergency">Emergency(緊急聯絡人):</string>
    <string name="in_development">In development</string>
    <string name="home">home</string>
    <string name="wifi">wifi</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="medicalRecords">就醫紀錄</string>
    <string name="medicationRecords">用藥紀錄</string>
    <string name="fallRecords">跌倒紀錄</string>
    <string name="symptomRecords">體徵紀錄</string>
    <string name="add_record">Add Record</string>
    <string name="switch_view">Switch View</string>
    <string name="fitXY">fitXY</string>
    <string name="divider">==========</string>
    <string name="last_update">Last Update</string>
    <string name="location">Location</string>
    <string name="new1">最新動態</string>

</resources>