<!-- res/layout/recyclerview_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="5dp"
    android:background="@android:color/transparent">

    <!-- Card content -->
    <androidx.cardview.widget.CardView
        android:id="@+id/pcard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="24dp">

        <!-- Additional details (Initially hidden) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="180dp"
                android:layout_height="120dp"
                card_view:cardCornerRadius="40dp"
                card_view:cardElevation="4dp"
                card_view:layout_constraintBottom_toTopOf="@id/txtName"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/hand"
                    android:importantForAutofill="auto"
                    android:scaleType="centerCrop"
                    android:src="@android:mipmap/sym_def_app_icon" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/scantext"
                android:textSize="24sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@id/cardView"
                card_view:layout_constraintStart_toStartOf="@id/cardView"
                card_view:layout_constraintTop_toBottomOf="@id/cardView" />

            <TextView
                android:id="@+id/txtNew"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new1"
                android:textColor="@color/scantext"
                android:textSize="16sp"
                card_view:layout_constraintBottom_toTopOf="@+id/txtLocation"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/cardView"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/scantext"
                android:textSize="12sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toStartOf="@id/txtLastUpdate"
                card_view:layout_constraintStart_toEndOf="@id/txtName"
                card_view:layout_constraintTop_toBottomOf="@id/txtNew" />

            <TextView
                android:id="@+id/txtLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/last_update"
                android:textColor="@color/scantext"
                android:textSize="12sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/txtLocation"
                card_view:layout_constraintTop_toBottomOf="@+id/txtNew" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>