<!-- res/layout/recyclerview_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp">

    <!-- Card content -->
    <androidx.cardview.widget.CardView
        android:id="@+id/pcard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="24dp"
        card_view:cardElevation="8dp">

        <!-- Additional details (Initially hidden) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/vector1"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="180dp"
                android:layout_height="120dp"
                card_view:cardCornerRadius="40dp"
                card_view:cardElevation="4dp"
                card_view:layout_constraintBottom_toTopOf="@id/txtName"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/hand"
                    android:importantForAutofill="auto"
                    android:scaleType="centerCrop"
                    android:src="@android:mipmap/sym_def_app_icon" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="24sp"
                card_view:layout_constraintEnd_toEndOf="@id/cardView"
                card_view:layout_constraintStart_toStartOf="@id/cardView"
                card_view:layout_constraintTop_toBottomOf="@id/cardView" />

            <LinearLayout
                android:id="@+id/collapseLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@id/cardView"
                card_view:layout_constraintStart_toStartOf="@id/cardView"
                card_view:layout_constraintTop_toBottomOf="@id/txtName">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/txtNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new1"
                    android:textSize="16sp"
                    card_view:layout_constraintEnd_toEndOf="@id/cardView"
                    card_view:layout_constraintStart_toStartOf="@id/cardView"
                    card_view:layout_constraintTop_toBottomOf="@id/cardView" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/txtLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/location"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtLastUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/last_update"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@id/cardView"
                card_view:layout_constraintStart_toStartOf="@id/cardView"
                card_view:layout_constraintTop_toBottomOf="@id/txtName">

                <TextView
                    android:id="@+id/txtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/age"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/height"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/contact"
                    android:textSize="12sp" />
                <!-- Add more details views as needed -->
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recordsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/cardView"
                card_view:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:maxWidth="200dp"

                    card_view:cardCornerRadius="16dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@id/cardView2"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_bg"
                        android:divider="@color/divider"
                        android:dividerPadding="1dp"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:showDividers="middle">


                        <!-- 就醫紀錄 -->
                        <TextView
                            android:id="@+id/txtMedicalRecords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/medicalRecords" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvMedicalRecords"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:nestedScrollingEnabled="false"
                            card_view:layout_constraintTop_toBottomOf="@id/txtMedicalRecords" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:maxWidth="200dp"

                    card_view:cardCornerRadius="16dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@id/cardView3"
                    card_view:layout_constraintStart_toEndOf="@id/cardView1"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_bg"
                        android:divider="@color/divider"
                        android:dividerPadding="1dp"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:showDividers="middle">

                        <!-- 用藥紀錄 -->
                        <TextView
                            android:id="@+id/txtMedicationRecords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/medicationRecords" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvMedicationRecords"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:nestedScrollingEnabled="false"
                            card_view:layout_constraintTop_toBottomOf="@id/txtMedicationRecords" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:maxWidth="200dp"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    card_view:cardCornerRadius="16dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@id/cardView4"
                    card_view:layout_constraintStart_toEndOf="@id/cardView2"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_bg"
                        android:divider="@color/divider"
                        android:dividerPadding="1dp"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:showDividers="middle">

                        <!-- 跌倒紀錄 -->
                        <TextView
                            android:id="@+id/txtFallRecords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/fallRecords" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvFallRecords"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:nestedScrollingEnabled="false"
                            card_view:layout_constraintTop_toBottomOf="@id/txtFallRecords" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:maxWidth="200dp"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    card_view:cardCornerRadius="16dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@id/txtLastUpdate1"
                    card_view:layout_constraintStart_toEndOf="@id/cardView3"
                    card_view:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_bg"
                        android:divider="@color/divider"
                        android:dividerPadding="1dp"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:showDividers="middle">

                        <!-- 體徵記錄 -->
                        <TextView
                            android:id="@+id/txtSymptomRecords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/symptomRecords" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvSymptomRecords"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            card_view:layout_constraintTop_toBottomOf="@id/txtSymptomRecords" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/back"
                    android:padding="12dp"
                    android:src="@drawable/ic_back"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@id/cardView4"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtLocation1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/location"

                    card_view:layout_constraintBottom_toTopOf="@id/txtLastUpdate1"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@id/cardView4" />

                <TextView
                    android:id="@+id/txtLastUpdate1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/last_update"

                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@id/cardView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>